feat: improve the longPress method to make it robust against flakyness